@@ -1,8 +1,10 @@
 libmongo-client (0.1.6.1-2) unstable; urgency=low
 
   * Really build with verbose messages enabled, the test suite too.
+  * Install and clean the m4/ directory too during build, to make
+    backporting easier.
 
- -- Gergely Nagy <algernon@madhouse-project.org>  Mon, 15 Oct 2012 08:36:51 +0200
+ -- Gergely Nagy <algernon@madhouse-project.org>  Mon, 15 Oct 2012 08:38:07 +0200
 
 libmongo-client (0.1.6.1-1) unstable; urgency=low
 
